--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Maxine Reyes Gomez",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.11.2",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
